--- a/helloword.html
+++ b/helloword.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Sitio Web de Pruebas</h1>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis, veniam maiores. Blanditiis, doloribus debitis eum praesentium, placeat sequi asperiores dolores odit dolore facere voluptate ut voluptatibus nisi earum. Odit, cumque.</p>    
+    <p>Que te parecio el curso.</p>    
 </body>
 </html>
