commit desde vsc

--- a/helloword.html
+++ b/helloword.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Sitio Web de Pruebas</h1>
-    <p>Que te parecio el curso.</p>    
+    <p>Que te parecio el curso
+        Consideras que vas a terminar la escuela de Javascript.</p>    
 </body>
 </html>
