--- a/helloword.html
+++ b/helloword.html
@@ -7,8 +7,8 @@
     <title>Platzi</title>
 </head>
 <body>
-    <h1>Sitio Web de Pruebas</h1>
+    <h1>Sitio Web de Profesional</h1>
     <p>Que te parecio el curso
         Consideras que vas a terminar la escuela de Javascript.</p>    
 </body>
-</html>
+</html>ß
